[package]
name = "diskbuffer"
version = "0.1.0"
authors = ["renecouto <renecoutoesilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features= ["thread-pool"]}
tokio = {version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"